# synesthete

./: .gitignore  .rustfmt.toml  2mil-euler.txt  Cargo.toml  README.md  package-lock.json  package.json  pnpm-lock.yaml  server.js  webpack.config.js
src/: App.module.scss  index.js  lib.rs
src/components/: Block.jsx  Grid.jsx
src/components/App/: App.jsx  App.module.scss
src/components/Block/: Block.jsx  Block.module.scss
src/components/Grid/: Grid.jsx  Grid.module.scss
src/components/NumberInput/: NumberInput.jsx  NumberInput.module.scss
src/utils/: index.js
