[package]
name = "synesthete"
version = "0.2.0"
authors = ["Cal Perez <clprz@proton.me>"]
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde-wasm-bindgen = "0.6.5"
console_error_panic_hook = "0.1.7"

[dependencies.wasm-bindgen]
version = "^0.2.106"
features = ["serde-serialize"]

[dependencies.web-sys]
version = "0.3.83"
features = ['ImageData', 'CanvasRenderingContext2d']
